fixed layout issues in customer review section and services section

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,9 +31,10 @@ a{
 }
 
 .container {
-  width: 100%;
-  height: auto;
-  margin: auto;
+  /* width: 100%; */
+  position: relative;
+  padding: 0 15px;
+    margin: auto;
 }
 
 @media (min-width: 576px) {
@@ -114,15 +115,20 @@ a{
 }
 @media (min-width: 1200px) {
   .container {
-    max-width: 1600px;
+    max-width: 1312px;
+    padding: 0 15px;
+    margin: auto;
   }
 }
 
 
 .row1 {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 -15px;
+  display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
 }
 
 .col-1,
@@ -297,20 +303,21 @@ h5 {
 
 .heroSection{
   position: relative;
-  /* display: flex; */
-  background: #F9F3DC;
   padding: 0 64px;
 }
 
 .heroSection::before{
   content: "";
-  background: #FFFFFF;
-  width: 400px;
+  background: #F9F3DC;
+  max-width: 1040px;
+  width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   bottom: 0;
+  z-index: -1;
+  margin: auto;
 }
 
 .crouselSectionImage {
@@ -320,8 +327,49 @@ h5 {
   z-index: 1;
 }
 
-.tiltedContainer {
-  /* background-color: #f5f5f5; */
-  clip-path: polygon(0 1%, 100% 7%, 100% 100%, 0% 100%);
+.tiltedContainer::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 200px;
+  left: 0;
+  right: 0;
+  top: 50px;
+  background: #F5F5F5;
+  transform: rotate(3deg) scale(1.5,1);
 }
 
+.tiltedContainer{
+  padding: 120px 0 100px;
+  position: relative;
+  overflow-x: hidden;
+}
+
+.tiltedContainer::after{
+  position: absolute;
+    content: "";
+    width: 100%;
+    height: calc(100% - 120px);
+    left: 0;
+    right: 0;
+    top: 120px;
+    background: #F5F5F5;
+    z-index: -1;
+}
+.title-border::before{
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 3px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background: #000000;
+}
+.title-border{
+  margin-left: 112px;
+  margin-bottom: 60px;
+  position: relative;
+  padding-left: 34px;
+}
